<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/foceen">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordAncient"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:singleLine="true"
        android:hint="@string/ancien_password"
        android:background="#50ffffff"
        android:textSize="@dimen/size_text"
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordNew"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:hint="@string/nouveau_password"
        android:background="#50ffffff"
        android:textSize="@dimen/size_text"
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordNewConfirm"
        android:layout_below="@+id/editTextPasswordNew"
        android:layout_alignLeft="@+id/editTextPasswordNew"
        android:layout_alignStart="@+id/editTextPasswordNew"
        android:layout_marginTop="52dp"
        android:singleLine="true"
        android:hint="@string/confirmation_password"
        android:background="#50ffffff"
        android:textSize="@dimen/size_text"
        android:textColor="#000000"
        android:textColorHint="#000000"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="Validation"
        android:id="@+id/buttonValidationChangePassword"
        android:background="#50ffffff"
        android:textColor="#000000"
        android:textSize="@dimen/size_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp" />
</RelativeLayout>